--- a/index.html
+++ b/index.html
@@ -1,145 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>DoubleU-Tech Advisory</title>
-  <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>DoubleU-Tech Advisory | Strategic Expansion & Technology Partners</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
 
-<!-- 導航欄 -->
-<header class="nav">
-  <div class="container nav-inner">
-    <div class="logo">DoubleU</div>
-    <nav>
-      <a href="#home">Home</a>
-      <a href="#services">Services</a>
-      <a href="#success">Success Stories</a>
-      <a href="#about">About</a>
-      <a href="#contact" class="btn-outline">Contact</a>
-    </nav>
-  </div>
+<header class="navbar">
+    <div class="container">
+        <div class="logo">
+            <span>DoubleU-Tech</span> <small>Advisory</small>
+        </div>
+        <nav>
+            <ul>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#team">Team</a></li>
+                <li><a href="https://docs.google.com/forms/d/1NVTxpE1GxGw2PP-wJPmQjvvNITMwZejaCdd22LE8-Q8/viewform" target="_blank" class="nav-cta">Contact Us</a></li>
+            </ul>
+        </nav>
+    </div>
 </header>
 
-<!-- 首頁 Hero 區 -->
-<section id="home" class="hero">
-  <div class="container hero-inner">
-    <h1>At Double U, we specialize in bridging cultural and business gaps to empower global companies in achieving seamless expansions into Taiwan.</h1>
-    <p>As your trusted consultancy partner, we help you navigate the complexities of entering new markets while providing tailored strategies to grow your business effectively.</p>
-    <a href="#contact" class="btn-primary">了解更多</a>
-  </div>
-</section>
-
-<!-- Bridge the Cultural Differences 區 -->
-<section class="section section-light">
-  <div class="container">
-    <h2>Bridge the Cultural Differences</h2>
-    <p>Success in new markets starts with understanding. Double U ensures you overcome cultural barriers by providing insights that align your business strategies with local customs, practices, and consumer expectations. Our team of experts facilitates clear communication and fosters strong partnerships to establish your brand’s credibility and trust in Taiwan.</p>
-  </div>
-</section>
-
-<!-- Grow Your Business 區 -->
-<section class="section section-dark">
-  <div class="container">
-    <h2>Grow Your Business</h2>
-    <p>Our consultancy is designed to elevate your business in Taiwan and beyond. Whether you need guidance on adapting to market trends or optimizing your go-to-market strategy, we are here to accelerate your growth. Our bespoke solutions focus on innovation, adaptability, and long-term value creation.</p>
-  </div>
-</section>
-
-<!-- 服務項目區 -->
-<section id="services" class="section section-light">
-  <div class="container">
-    <h2>Our Services</h2>
-    <div class="grid-3">
-      <div class="card">
-        <h3>Product Strategy & Positioning Advisory</h3>
-        <p>We help define your product strategy and market positioning to ensure a competitive edge.</p>
-      </div>
-      <div class="card">
-        <h3>Marketing Activities</h3>
-        <p>Material generation, exhibition support, event & seminar organization, publication, report.</p>
-      </div>
-      <div class="card">
-        <h3>Business Development</h3>
-        <p>Establish partnerships, generate leads, expand global presence and revenue growth.</p>
-      </div>
-      <div class="card">
-        <h3>Business Model Optimization</h3>
-        <p>Scenario-based analysis and profit maximization for sustainable growth.</p>
-      </div>
-      <div class="card">
-        <h3>Channel Establishment & Distribution</h3>
-        <p>Set up and manage distribution channels to maximize market penetration.</p>
-      </div>
+<section class="hero">
+    <div class="container">
+        <div class="hero-content">
+            <h1>Bridging Global Innovation with Taiwan's Market.</h1>
+            <p>Strategic advisory for technology companies navigating complex expansions and digital transformations.</p>
+            <div class="hero-btns">
+                <a href="#about" class="btn btn-dark">Learn More</a>
+                <a href="https://docs.google.com/forms/d/1NVTxpE1GxGw2PP-wJPmQjvvNITMwZejaCdd22LE8-Q8/viewform" target="_blank" class="btn btn-outline">Consultation</a>
+            </div>
+        </div>
     </div>
-  </div>
 </section>
 
-<!-- Success Stories 區 -->
-<section id="success" class="section section-dark">
-  <div class="container">
-    <h2>Success Stories</h2>
-    <div class="grid-3">
-      <div class="card">
-        <h3>Client A</h3>
-        <p>Helping Client A establish operations in Taiwan with strategic partnerships.</p>
-      </div>
-      <div class="card">
-        <h3>Client B</h3>
-        <p>Market entry advisory and execution for Client B in the semiconductor sector.</p>
-      </div>
-      <div class="card">
-        <h3>Client C</h3>
-        <p>Optimized distribution channels and partnerships for Client C in APAC.</p>
-      </div>
+<section id="services" class="services">
+    <div class="container">
+        <h2 class="section-title">Our Expertise</h2>
+        <div class="service-grid">
+            <div class="service-card">
+                <h3>Market Entry Strategy</h3>
+                <p>Tailored roadmaps for global firms looking to establish a seamless presence in the Taiwan technology ecosystem.</p>
+            </div>
+            <div class="service-card">
+                <h3>Digital Transformation</h3>
+                <p>Modernizing legacy systems with Cloudflare, AWS, and Azure integration to drive operational excellence.</p>
+            </div>
+            <div class="service-card">
+                <h3>Technical Architecture</h3>
+                <p>Designing scalable, secure, and resilient infrastructure to support long-term business growth.</p>
+            </div>
+        </div>
     </div>
-  </div>
 </section>
 
-<!-- About Us 區 -->
-<section id="about" class="section section-light">
-  <div class="container narrow">
-    <h2>About Double U</h2>
-    <p>Double U began as a vision rooted in the heart of its founder... enabling businesses to thrive in Taiwan and beyond.</p>
-    <h3>The Core Team Behind Double U</h3>
-    <div class="grid-3">
-      <div class="card team-card">
-        <div class="team-img">Img</div>
-        <h4>Founder Name</h4>
-        <p>CEO / Founder</p>
-      </div>
-      <div class="card team-card">
-        <div class="team-img">Img</div>
-        <h4>Partner Name</h4>
-        <p>Strategy Lead</p>
-      </div>
-      <div class="card team-card">
-        <div class="team-img">Img</div>
-        <h4>Partner Name</h4>
-        <p>Business Development</p>
-      </div>
-    </div>
-  </div>
-</section>
+<section id="about" class="about">
+    <div class="container">
+        <div class="about-flex">
+            <div class="about-text">
+                <h2>About DoubleU-Tech</h2>
+                <p>DoubleU-Tech began as a vision rooted in the heart of its founder, bridging cultural and business gaps to enable global companies to thrive in Taiwan and beyond. We specialize in navigating the complexities of entering new markets with tailored strategies.</p>
+            </div>
+        </div>
 
-<!-- Contact 區 -->
-<section id="contact" class="section section-dark">
-  <div class="container narrow">
-    <h2>Contact Us</h2>
-    <p>Let us help you transform your business vision into reality. Contact Double U Technology today to discover how our services can drive your success and position your company for long-term growth.</p>
-    <a href="mailto:contact@doubleu-tech.com" class="btn-primary">立即聯繫</a>
-  </div>
-</section>
-
-<!-- Footer -->
-<footer class="footer">
-  <div class="container footer-inner">
-    <div>© 2025 DoubleU-Tech Advisory</div>
-    <div>Independent technology advisory</div>
-  </div>
-</footer>
-
-</body>
-</html>
+        <div id="team" class="team-section">
+            <h3>Meet Our Leadership</h3>
+            <div class="team-grid">
+                <div class="team-member">
+                    <div class="member-photo"></div> <h4>Founder Name</h4>
+                    <span>CEO & Managing Partner</span>
+                    <p>Expert in cross-border tech expansion and strategic consulting.</p>
+                </div>
+                <div class="team-member">
+                    <div class="member-photo"></div>
+                    <h4>Associate Name
