--- a/index.html
+++ b/index.html
@@ -4,22 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DoubleU-Tech Advisory | Strategic Expansion & Technology Partners</title>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,700;1,400&family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
 
-<header class="navbar">
-    <div class="container">
-        <div class="logo">
-            <span>DoubleU-Tech</span> <small>Advisory</small>
+<header class="nav">
+    <div class="container nav-inner">
+        <div class="logo-wrapper">
+            <img src="DoubleU-logotype-24.png" alt="DoubleU-Tech Logo" class="site-logo">
         </div>
         <nav>
-            <ul>
+            <ul class="nav-links">
                 <li><a href="#services">Services</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#team">Team</a></li>
-                <li><a href="https://docs.google.com/forms/d/1NVTxpE1GxGw2PP-wJPmQjvvNITMwZejaCdd22LE8-Q8/viewform" target="_blank" class="nav-cta">Contact Us</a></li>
+                <li><a href="#contact" class="btn-outline">Contact Us</a></li>
             </ul>
         </nav>
     </div>
@@ -28,53 +28,130 @@
 <section class="hero">
     <div class="container">
         <div class="hero-content">
-            <h1>Bridging Global Innovation with Taiwan's Market.</h1>
-            <p>Strategic advisory for technology companies navigating complex expansions and digital transformations.</p>
-            <div class="hero-btns">
-                <a href="#about" class="btn btn-dark">Learn More</a>
-                <a href="https://docs.google.com/forms/d/1NVTxpE1GxGw2PP-wJPmQjvvNITMwZejaCdd22LE8-Q8/viewform" target="_blank" class="btn btn-outline">Consultation</a>
+            <span class="sub-heading">Global Connectivity</span>
+            <h1>Bridging Cultural Gaps for Seamless Taiwan Expansion.</h1>
+            <p>At DoubleU-Tech, we specialize in empowering global technology firms to navigate complex markets with localized expertise and strategic foresight.</p>
+            <div class="hero-actions">
+                <a href="#about" class="btn-primary">Our Story</a>
+                <a href="#contact" class="btn-secondary">Get In Touch</a>
             </div>
         </div>
     </div>
 </section>
 
-<section id="services" class="services">
+<section class="section section-light">
     <div class="container">
-        <h2 class="section-title">Our Expertise</h2>
-        <div class="service-grid">
-            <div class="service-card">
-                <h3>Market Entry Strategy</h3>
-                <p>Tailored roadmaps for global firms looking to establish a seamless presence in the Taiwan technology ecosystem.</p>
+        <div class="split-content">
+            <div class="split-text">
+                <h2>Bridging Cultural Differences</h2>
+                <p>Success starts with understanding. We ensure your business strategies align with local customs and consumer expectations. Our experts facilitate clear communication and foster strong partnerships to establish trust in Taiwan's competitive market.</p>
             </div>
-            <div class="service-card">
-                <h3>Digital Transformation</h3>
-                <p>Modernizing legacy systems with Cloudflare, AWS, and Azure integration to drive operational excellence.</p>
-            </div>
-            <div class="service-card">
-                <h3>Technical Architecture</h3>
-                <p>Designing scalable, secure, and resilient infrastructure to support long-term business growth.</p>
-            </div>
-        </div>
-    </div>
-</section>
-
-<section id="about" class="about">
-    <div class="container">
-        <div class="about-flex">
-            <div class="about-text">
-                <h2>About DoubleU-Tech</h2>
-                <p>DoubleU-Tech began as a vision rooted in the heart of its founder, bridging cultural and business gaps to enable global companies to thrive in Taiwan and beyond. We specialize in navigating the complexities of entering new markets with tailored strategies.</p>
-            </div>
-        </div>
-
-        <div id="team" class="team-section">
-            <h3>Meet Our Leadership</h3>
-            <div class="team-grid">
-                <div class="team-member">
-                    <div class="member-photo"></div> <h4>Founder Name</h4>
-                    <span>CEO & Managing Partner</span>
-                    <p>Expert in cross-border tech expansion and strategic consulting.</p>
+            <div class="split-image-placeholder">
                 </div>
-                <div class="team-member">
-                    <div class="member-photo"></div>
-                    <h4>Associate Name
+        </div>
+    </div>
+</section>
+
+<section id="services" class="section section-dark">
+    <div class="container">
+        <div class="centered-heading">
+            <span class="sub-heading">Expertise</span>
+            <h2>Tailored Advisory Solutions</h2>
+        </div>
+        <div class="grid-3">
+            <div class="card">
+                <div class="card-num">01</div>
+                <h3>Market Entry & Positioning</h3>
+                <p>Defining product strategies and market positioning to ensure a sustainable competitive edge.</p>
+            </div>
+            <div class="card">
+                <div class="card-num">02</div>
+                <h3>Strategic Marketing</h3>
+                <p>Exhibition support, seminar organization, and localized material generation to amplify your brand.</p>
+            </div>
+            <div class="card">
+                <div class="card-num">03</div>
+                <h3>Business Development</h3>
+                <p>Establishing high-value partnerships and generating leads to drive revenue growth in APAC.</p>
+            </div>
+            <div class="card">
+                <div class="card-num">04</div>
+                <h3>Model Optimization</h3>
+                <p>Scenario-based analysis and profit maximization strategies tailored for technology innovators.</p>
+            </div>
+            <div class="card">
+                <div class="card-num">05</div>
+                <h3>Distribution Channels</h3>
+                <p>Identifying and managing distribution networks to maximize market penetration across sectors.</p>
+            </div>
+            <div class="card">
+                <div class="card-num">06</div>
+                <h3>Cultural Consulting</h3>
+                <p>Navigating the nuances of local business etiquette to foster long-term credibility.</p>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section id="about" class="section about-team">
+    <div class="container">
+        <div class="about-text-center narrow">
+            <h2>The Visionaries Behind DoubleU-Tech</h2>
+            <p>We began with a singular mission: enabling global businesses to thrive in Taiwan and beyond. Our team brings decades of combined experience in strategic consulting and business expansion.</p>
+        </div>
+
+        <div id="team" class="team-grid">
+            <div class="team-member">
+                <div class="member-img-frame">
+                    </div>
+                <h4>Founder Name</h4>
+                <span class="role">CEO / Founder</span>
+                <p>Expert in cross-border expansion and market entry strategy.</p>
+            </div>
+            <div class="team-member">
+                <div class="member-img-frame"></div>
+                <h4>Partner Name</h4>
+                <span class="role">Strategy Lead</span>
+                <p>Specializing in Cloud infrastructure and technical architecture.</p>
+            </div>
+            <div class="team-member">
+                <div class="member-img-frame"></div>
+                <h4>Partner Name</h4>
+                <span class="role">Business Development</span>
+                <p>Focusing on APAC distribution and partnership management.</p>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section id="contact" class="section contact-form-section">
+    <div class="container narrow">
+        <div class="centered-heading">
+            <h2>Contact Us</h2>
+            <p>Let us help transform your vision into reality. Submit your inquiry below and our team will be in touch shortly.</p>
+        </div>
+        
+        <div class="form-container">
+            <iframe 
+                src="https://docs.google.com/forms/d/e/1FAIpQLSeS-S9w7_S-HkYfP8YpM_X_X_X_X/viewform?embedded=true" 
+                width="100%" 
+                height="800" 
+                frameborder="0" 
+                marginheight="0" 
+                marginwidth="0">Loading…</iframe>
+        </div>
+    </div>
+</section>
+
+<footer class="footer">
+    <div class="container footer-inner">
+        <div class="footer-logo">
+            <img src="DoubleU-logotype-27.png" alt="DoubleU-Tech" class="footer-logo-img">
+        </div>
+        <div class="footer-copy">© 2025 DoubleU-Tech Advisory. All rights reserved.</div>
+        <div class="footer-info">Independent Technology Advisory | Global Presence</div>
+    </div>
+</footer>
+
+</body>
+</html>
