--- a/index.html
+++ b/index.html
@@ -126,12 +126,12 @@
         </div>
         <div class="form-wrapper">
             <iframe 
-                src="<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSffelARBEmcZqGrMwYvy4R2h3z-vUEoq-bb9_Pmozz7n_GLGg/viewform?embedded=true" 
+                src="https://docs.google.com/forms/d/e/1FAIpQLSffelARBEmcZqGrMwYvy4R2h3z-vUEoq-bb9_Pmozz7n_GLGg/viewform?embedded=true" 
                 width="100%" 
-                height="1000" 
+                height="900" 
                 frameborder="0" 
                 marginheight="0" 
-                marginwidth="0">Loading…</iframe>
+                marginwidth="0">載入中…</iframe>
         </div>
     </div>
 </section>
@@ -147,5 +147,6 @@
 
 </body>
 </html>
+
 
 
