--- a/index.html
+++ b/index.html
@@ -99,18 +99,18 @@
         <div class="team-grid">
             <div class="team-member">
                 <div class="member-photo"></div>
-                <h4>Founder Name</h4>
-                <p class="role">CEO / Founder</p>
+                <h4>Bert Sie</h4>
+                <p class="role">Managing Director</p>
             </div>
             <div class="team-member">
                 <div class="member-photo"></div>
-                <h4>Lead Partner</h4>
-                <p class="role">Strategy Lead</p>
+                <h4>Teresa</h4>
+                <p class="role">Principal</p>
             </div>
             <div class="team-member">
                 <div class="member-photo"></div>
-                <h4>Strategic Advisor</h4>
-                <p class="role">Business Development</p>
+                <h4>Fred Chen</h4>
+                <p class="role">VP Channel & Distribution</p>
             </div>
         </div>
     </div>
@@ -138,7 +138,7 @@
                 </div>
                 <div class="form-group">
                     <label>Subject</label>
-                    <input type="text" name="entry.1262646125" id="subject" placeholder="Expansion / Technical / Partnership">
+                    <input type="text" name="entry.1262646125" id="subject" placeholder="Inquiry Subject">
                 </div>
                 <div class="form-group">
                     <label>Message</label>
@@ -147,7 +147,7 @@
                 <button type="submit" class="btn btn-dark" style="width:100%; border:none; cursor:pointer;">Submit Inquiry</button>
             </form>
             <div id="thank-you" style="display:none; text-align: center; padding: 40px; background: #fff; border: 1px solid #eee;">
-                <h3 style="color: var(--accent);">Thank You.</h3>
+                <h3 style="color: var(--accent); font-family: 'Playfair Display', serif;">Thank You.</h3>
                 <p>Your message has been received. Our advisory team will reach out shortly.</p>
             </div>
         </div>
@@ -180,7 +180,6 @@
             window.scrollTo({ top: document.getElementById('contact').offsetTop - 100, behavior: 'smooth' });
         }).catch(err => {
             alert('Submission failed. Please try again or email us directly.');
-            console.error(err);
         });
     });
 </script>
