--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             </div>
             <div class="team-member">
                 <div class="member-photo">
-                    <img src="Teresa photo.jpg" alt="Teresa">
+                    <img src="Teresa photo.jpg" alt="Teresa Jhan">
                 </div>
                 <h4>Teresa</h4>
                 <p class="role">Principal</p>
@@ -194,6 +194,7 @@
 
 </body>
 </html>
+
 
 
 
