--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="container nav-inner">
         <div class="logo">
             <a href="/" class="logo-link">
-                <img src="DoubleU-logotype-24.png" alt="DoubleU-Tech Advisory - Strategic Technology Partner in Taiwan">
+                <img src="assets/images/DoubleU-logotype-24.png" alt="DoubleU-Tech Advisory - Strategic Technology Partner in Taiwan">
             </a>
         </div>
         <nav>
@@ -120,21 +120,21 @@
         <div class="team-grid">
             <div class="team-member">
                 <div class="member-photo">
-                    <img src="Bert_Sie-removebg-preview.png" alt="Bert Sie - Managing Director, DoubleU-Tech Advisory">
+                    <img src="assets/images/Bert_Sie-removebg-preview.png" alt="Bert Sie - Managing Director, DoubleU-Tech Advisory">
                 </div>
                 <h4>Bert Sie</h4>
                 <p class="role">Managing Director</p>
             </div>
             <div class="team-member">
                 <div class="member-photo">
-                    <img src="Teresa photo.jpg" alt="Teresa Jhan - Principal, DoubleU-Tech Advisory">
+                    <img src="assets/images/Teresa.JPG" alt="Teresa Jhan - Principal, DoubleU-Tech Advisory">
                 </div>
                 <h4>Teresa Jhan</h4>
                 <p class="role">Principal</p>
             </div>
             <div class="team-member">
                 <div class="member-photo">
-                    <img src="FRED_3_0.png" alt="Fred Chen - VP Channel & Distribution, DoubleU-Tech Advisory">
+                    <img src="assets/images/FRED_3_0.png" alt="Fred Chen - VP Channel & Distribution, DoubleU-Tech Advisory">
                 </div>
                 <h4>Fred Chen</h4>
                 <p class="role">VP Channel & Distribution</p>
@@ -146,7 +146,7 @@
 <footer class="footer">
     <div class="container footer-inner">
         <div class="footer-logo">
-            <img src="DoubleU-logotype-27.png" alt="DoubleU-Tech Advisory - Asia Market Business Development">
+            <img src="assets/images/DoubleU-logotype-27.png" alt="DoubleU-Tech Advisory - Asia Market Business Development">
         </div>
         <p>&copy; 2025 DoubleU-Tech Advisory. Strategic Expansion Partners for the Asia-Pacific Market.</p>
     </div>
