--- a/about.html
+++ b/about.html
@@ -87,7 +87,7 @@
     <div class="modal-content">
         <span class="close" onclick="closeModal('modal-bert')">&times;</span>
         <div class="modal-header">
-            <h3>Bert Sie (薛博中)</h3>
+            <h3>Bert Sie </h3>
             <p class="role">Managing Director</p>
         </div>
         <div class="modal-body">
@@ -101,7 +101,7 @@
     <div class="modal-content">
         <span class="close" onclick="closeModal('modal-teresa')">&times;</span>
         <div class="modal-header">
-            <h3>Teresa Jhan (詹惠捷)</h3>
+            <h3>Teresa Jhan </h3>
             <p class="role">Principal</p>
         </div>
         <div class="modal-body">
