--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     <label>Message</label>
                     <textarea name="entry.512682809" rows="4" placeholder="How can we help your business?"></textarea>
                 </div>
-                <button type="submit" class="btn btn-dark" style="width:100%; border:none; cursor:pointer;">Submit Connect Request</button>
+                <button type="submit" class="submit-btn">Submit Connect Request</button> style="width:100%; border:none; cursor:pointer;">Submit Connect Request</button>
             </form>
         </div>
     </div>
@@ -114,3 +114,4 @@
 
 </body>
 </html>
+
