--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DoubleU-Tech | Empowering Growth & Bridging the Gap in Taiwan</title>
+    <title>DoubleU-Tech Advisory | Taiwan Semiconductor & AI Market Entry Expert</title>
     
-    <meta name="description" content="DoubleU-Tech empowers technology firms and startups to expand into Taiwan and the US through strategic market entry, product positioning, and business development.">
-    
+    <meta name="description" content="Strategic advisory led by Bert Sie, Teresa Jhan, and Fred Chen. We specialize in Asia market business development for AI, Automotive, RF, and mmWave tech, bridging global startups with Taiwan's semiconductor ecosystem (TSMC, MediaTek, UMC).">
+    <meta name="keywords" content="DoubleU-Tech, Bert Sie, Teresa Jhan, Fred Chen, Taiwan Market Entry, Business Development, AI, TSMC, MediaTek, UMC, Startup Advisory">
+
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,700;1,400&family=Montserrat:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 
@@ -40,7 +41,8 @@
                 <li><a href="services.html">Services</a></li>
                 <li><a href="success-stories.html">Success Stories</a></li>
                 <li><a href="about.html">About US</a></li>
-                <li><a href="#contact" class="nav-btn">Connect</a></li> </ul>
+                <li><a href="#contact" class="nav-btn">Connect</a></li>
+            </ul>
         </nav>
     </div>
 </header>
@@ -65,7 +67,7 @@
             <p class="overline">Innovation For Impact</p>
             <h2>Who We Serve</h2>
             <p>At DoubleU, we empower **Technology Innovators (Startups)** and **Corporates** looking to expand their footprint in Taiwan and the US. We bridge the cultural and business gaps to ensure your global vision becomes a local success.</p>
-            <a href="services.html" class="btn-text">View Our Services →</a>
+            <a href="services.html" class="btn-text" style="display:inline-block; margin-top:20px; color:var(--accent); text-decoration:none; font-weight:600;">View Our Services →</a>
         </div>
         <div class="about-image-placeholder">
             </div>
@@ -96,7 +98,7 @@
                     <label>Message</label>
                     <textarea name="entry.512682809" rows="4" placeholder="How can we help your business?"></textarea>
                 </div>
-                <button type="submit" class="submit-btn">Submit Connect Request</button> style="width:100%; border:none; cursor:pointer;">Submit Connect Request</button>
+                <button type="submit" class="submit-btn">Submit Connect Request</button>
             </form>
         </div>
     </div>
@@ -114,4 +116,3 @@
 
 </body>
 </html>
-
