--- a/about.html
+++ b/about.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About US | DoubleU-Tech Advisory</title>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css"> <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -30,9 +29,9 @@
         <h2 style="font-size: 48px; margin-bottom: 40px;">Empowering Through Bridging The Gap</h2>
         <div class="split">
             <div class="about-text">
-                <p style="margin-bottom: 25px;">Double U began as a vision rooted in the heart of its founder. With years of experience in the semiconductor industry, the founder was driven by a passion for life-changing technologies and a desire to shape the world by commercializing innovations.</p>
+                <p style="margin-bottom: 25px;">Double U began as a vision rooted in the heart of its founder. With years of experience in the semiconductor industry, the founder was driven by a passion for life-changing technologies[cite: 96, 97, 98].</p>
                 <div class="meaning-card">
-                    <p><strong>What "Double U" Means:</strong> Our name symbolizes representing foreign companies' presence in Taiwan and accelerating market penetration, effectively <strong>doubling their impact</strong>.</p>
+                    <p><strong>What "Double U" Means:</strong> Our name symbolizes representing foreign companies' presence in Taiwan and accelerating market penetration, effectively <strong>doubling their impact</strong>[cite: 100].</p>
                 </div>
             </div>
             <div class="about-image-placeholder"></div>
@@ -40,26 +39,26 @@
     </div>
 </section>
 
-<section id="team" class="section" style="background: var(--grey-light);">
+<section class="section" style="background: var(--grey-light);">
     <div class="container">
         <div class="section-header centered">
             <p class="overline">The Core Team</p>
             <h2>The Leadership Behind DoubleU</h2>
-            <p>Click on a leader to learn more about their background and expertise.</p>
         </div>
+        
         <div class="team-grid">
             <div class="team-member" onclick="openModal('modal-bert')">
-                <div class="member-photo"><img src="assets/images/Bert_Sie.png"></div>
+                <div class="member-photo"><img src="assets/images/Bert_Sie.png" alt="Bert Sie"></div>
                 <h4>Bert Sie</h4>
                 <p class="role">Managing Director</p>
             </div>
             <div class="team-member" onclick="openModal('modal-teresa')">
-                <div class="member-photo"><img src="assets/images/Teresa.JPG"></div>
+                <div class="member-photo"><img src="assets/images/Teresa.JPG" alt="Teresa Jhan"></div>
                 <h4>Teresa Jhan</h4>
                 <p class="role">Principal</p>
             </div>
             <div class="team-member" onclick="openModal('modal-fred')">
-                <div class="member-photo"><img src="assets/images/FRED_3_0.png"></div>
+                <div class="member-photo"><img src="assets/images/FRED_3_0.png" alt="Fred Chen"></div>
                 <h4>Fred Chen</h4>
                 <p class="role">VP Channel & Distribution</p>
             </div>
@@ -73,7 +72,7 @@
         <h3>Bert Sie</h3>
         <p class="role">Managing Director</p>
         <div class="modal-body">
-            <p>Bert started the "Double U" concept in early 2022, providing marketing strategies for various companies. He is currently the Head of Sales & Business Development for Beammwave Taiwan. Prior to this role, Bert held various leadership positions at EDOM, a top 7 global IC distributor, where he established the first mass market business group, leading sales and marketing. Previously, he led product management teams for acoustic, networking, PC, and smartphone applications, assisting 5 startups from 0 to 1. He received an MBA degree from National Central University in Taiwan.</p>
+            <p>Bert started the "Double U" concept in early 2022. He is currently the Head of Sales & Business Development for Beammwave Taiwan. Prior to this, Bert held leadership positions at EDOM, leading sales and marketing for mass market business groups.</p>
             <a href="https://www.linkedin.com/in/bert-sie-891a9350/" target="_blank" class="linkedin-link">View LinkedIn Profile</a>
         </div>
     </div>
@@ -85,7 +84,7 @@
         <h3>Teresa Jhan</h3>
         <p class="role">Principal</p>
         <div class="modal-body">
-            <p>Teresa, a seasoned 15-year veteran in the IoT industry, possesses a masterful grasp of total solutions, spanning cloud platforms, devices, and key components. Her work extends to international corporations, where she adeptly navigates communication among diverse stakeholders. With a keen eye on technology trends and insightful observations, Teresa’s consultative sales approach ensures tailored product demonstrations. Her solution-oriented mindset makes her an invaluable asset in the tech-savvy team.</p>
+            <p>Teresa, a seasoned 15-year veteran in the IoT industry, possesses a masterful grasp of total solutions spanning cloud platforms and key components.</p>
             <a href="https://www.linkedin.com/in/teresa-jhan-%E8%A9%B9%E6%83%A0%E6%8D%B7-31bb5910b/" target="_blank" class="linkedin-link">View LinkedIn Profile</a>
         </div>
     </div>
@@ -97,43 +96,33 @@
         <h3>Fred Chen</h3>
         <p class="role">VP Channel & Distribution</p>
         <div class="modal-body">
-            <p>Fred Chen, with over two decades of expertise in the IC supply chain. Previously, Fred led Realtek's engagements with the largest PC/NB brand in China. Prior to his tenure at Realtek, he held a pivotal role in channel sales for the Taiwan district at Micron. Fred began his illustrious career at Avent, where he honed his skills in product management. He received a BS degree in Electric Engineering from the National Taipei University of Technology in Taiwan.</p>
+            <p>Fred Chen, with over two decades of expertise in the IC supply chain. Previously, Fred led Realtek's engagements with the largest PC/NB brand in China.</p>
             <a href="#" target="_blank" class="linkedin-link">View LinkedIn Profile</a>
         </div>
     </div>
 </div>
 
-<section id="contact" class="section contact">
-    <div class="container narrow">
-        <div class="section-header centered">
-            <p class="overline">Stay in the loop</p>
-            <h2>Connect With Our Experts</h2>
-        </div>
-        <div class="custom-form-wrapper">
-            <form>
-                <div class="form-row">
-                    <div class="form-group"><label>Name</label><input type="text" placeholder="Full Name" required></div>
-                    <div class="form-group"><label>Email Address</label><input type="email" placeholder="email@company.com" required></div>
-                </div>
-                <div class="form-group"><label>Message</label><textarea rows="3" placeholder="How can we help your business?"></textarea></div>
-                <button type="submit" class="submit-btn">Submit Connect Request</button>
-            </form>
-        </div>
-    </div>
-</section>
-
 <footer class="footer">
     <div class="container">
         <div class="footer-logo"><img src="assets/images/DoubleU-logotype-27.png"></div>
-        <p>Taipei, Taiwan | info@doubleu-tech.com</p>
         <p>&copy; 2025 DoubleU-Tech Advisory. All Rights Reserved.</p>
     </div>
 </footer>
 
 <script>
-    function openModal(id) { document.getElementById(id).style.display = "flex"; document.body.style.overflow = "hidden"; }
-    function closeModal(id) { document.getElementById(id).style.display = "none"; document.body.style.overflow = "auto"; }
+    // 確保彈出視窗顯示為 flex
+    function openModal(id) {
+        var modal = document.getElementById(id);
+        modal.style.setProperty('display', 'flex', 'important');
+        document.body.style.overflow = "hidden";
+    }
+    function closeModal(id) {
+        var modal = document.getElementById(id);
+        modal.style.setProperty('display', 'none', 'important');
+        document.body.style.overflow = "auto";
+    }
     window.onclick = function(e) { if (e.target.className === 'modal') { closeModal(e.target.id); } }
 </script>
+
 </body>
 </html>
