--- a/insights.html
+++ b/insights.html
@@ -27,39 +27,42 @@
 
 <section class="section" style="background: var(--grey-light);">
     <div class="container">
-        <p class="overline" style="text-align:center;">Latest Updates</p>
-        <h2 style="text-align:center; font-size: 42px; margin-bottom: 20px;">Industry Insights & News</h2>
+        <p class="overline" style="text-align:center;">Latest News</p>
+        <h2 style="text-align:center; font-size: 42px; margin-bottom: 20px;">Impact & Insights</h2>
         
         <div class="news-grid">
-            <a href="#" class="news-card">
-                <div class="news-image"><img src="assets/images/texas-office.jpg" alt="Texas Office"></div>
+            <a href="https://siteselection.com/international-trade-fdi-waving-the-flag-texas-makes-its-case-to-the-world/" target="_blank" class="news-card">
+                <div class="news-image" style="background: #002d62; display: flex; align-items: center; justify-content: center; color: white; padding: 20px; text-align: center;">
+                    <h3 style="font-family: 'Montserrat'; color: white;">TEXAS TRADE REPORT</h3>
+                </div>
                 <div class="news-content">
                     <span class="news-date">DEC 2025</span>
-                    <h4>Strategic Expansion: New Office in Texas (STTO)</h4>
-                    <p>Expanding our footprint to support Taiwan-US semiconductor collaboration. DoubleU is now on the ground in Texas.</p>
-                    <span class="read-more">Read Article</span>
+                    <h4>Texas Makes Its Case to the World</h4>
+                    <p>International Trade & FDI: How Texas is strengthening its global ties and why it's a key hub for innovation.</p>
+                    <span class="read-more">External Report</span>
                 </div>
             </a>
 
-            <a href="#" class="news-card">
-                <div class="news-image"><img src="assets/images/success-1.jpg" alt="Market Entry"></div>
+            <a href="https://beammwave.com/press-release/beammwave-and-alpha-networks-enters-into-an-agreement-to-do-a-joint-pre-study-for-the-next-generation-fixed-wireless-access-products/" target="_blank" class="news-card">
+                <div class="news-image" style="background: #eb611b; display: flex; align-items: center; justify-content: center; color: white; padding: 20px; text-align: center;">
+                    <h3 style="font-family: 'Montserrat'; color: white;">JOINT PRE-STUDY</h3>
+                </div>
                 <div class="news-content">
                     <span class="news-date">NOV 2025</span>
-                    <h4>Helping Beammwave Navigate Taiwan Market</h4>
-                    <p>From zero to one: How we established a leading presence for high-tech innovators in the local ecosystem.</p>
-                    <span class="read-more">Case Study</span>
+                    <h4>Beammwave and Alpha Networks Agreement</h4>
+                    <p>Joint pre-study for next-generation Fixed Wireless Access (FWA) products, bridging advanced tech and market needs.</p>
+                    <span class="read-more">Press Release</span>
                 </div>
             </a>
 
-            <a href="https://example-news.com" target="_blank" class="news-card">
-                <div class="news-image"><img src="assets/images/industry-news.jpg" alt="Industry"></div>
+            <div class="news-card" style="opacity: 0.7;">
+                <div class="news-image" style="background: #eee;"></div>
                 <div class="news-content">
-                    <span class="news-date">OCT 2025</span>
-                    <h4>Semiconductor Trends in 2026: What to Watch</h4>
-                    <p>External Resource: A deep dive into the shifting landscape of global supply chains and Taiwan's role.</p>
-                    <span class="read-more">External Link</span>
+                    <span class="news-date">COMING SOON</span>
+                    <h4>Empowering Global Innovators</h4>
+                    <p>Stay tuned for our latest partnerships and market entry success stories.</p>
                 </div>
-            </a>
+            </div>
         </div>
     </div>
 </section>
