--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
         <p class="overline">Think Globally, Act Locally</p>
         <h1>Empowering Through Bridging The Gap.</h1>
         <p style="font-size: 19px; color: var(--text-secondary); margin-bottom: 45px; max-width: 650px;">Driving Unity, Zero To One. We specialize in helping technology innovators and global corporates navigate and thrive in the Taiwan and US markets.</p>
-        <div class="hero-btns" style="display: flex; gap: 20px;">
+        
+        <div class="hero-btns" style="display: flex; gap: 20px; flex-wrap: wrap;">
             <a href="about.html" class="btn btn-dark">Our Story</a>
             <a href="#contact" class="btn btn-outline">Start a Project</a>
         </div>
@@ -45,7 +46,7 @@
             <p>At DoubleU, we empower **Technology Innovators (Startups)** and **Corporates** looking to expand their footprint in Taiwan and the US.</p>
             <a href="services.html" class="btn-text" style="display:inline-block; margin-top:20px; color:var(--accent); text-decoration:none; font-weight:600;">View Our Services →</a>
         </div>
-        <div class="about-image-placeholder" style="background:#eee; height:400px;"></div>
+        <div class="about-image-placeholder" style="background:#eee; height:400px; border-radius: 4px;"></div>
     </div>
 </section>
 
