--- a/insights.html
+++ b/insights.html
@@ -47,7 +47,7 @@
                     <div class="news-content">
                         <span style="color:var(--accent); font-weight:700; font-size:12px;">JULY 2024</span>
                         <h4 style="margin:10px 0;">Governor Abbott Announces Texas Office in Taipei</h4>
-                        <p style="font-size:14px; color:#666;">New permanent office to strengthen Texas-Taiwan ties.</p>
+                        <p style="font-size:14px; color:#666;">Official press release on the new permanent office in Taiwan.</p>
                     </div>
                 </a>
 
