--- a/about.html
+++ b/about.html
@@ -237,9 +237,9 @@
         <h3 style="font-family:'Playfair Display'; font-size:28px; color:var(--primary-dark);">Bert Sie</h3>
         <p style="color:var(--accent); font-weight:700; margin-bottom:20px; text-align:center;">Managing Director</p>
         
-        <p>Bert co-developed the “Double U” concept with Teresa in early 2022, focusing on go-to-market and growth strategies for technology-driven companies. He is currently the Head of Sales & Business Development for both Beammwave and AlixLabs in Taiwan.</p>
-        <p>Prior to this role, Bert held multiple leadership positions at EDOM, a top-7 global IC distributor, where he established the company’s first mass-market business group and led both sales and marketing initiatives.</p>
-        <p>Earlier in his career, he led product management teams across acoustic, networking, PC, and smartphone applications, successfully supporting five startups from concept to commercialization (0 to 1). Bert holds an MBA from National Central University, Taiwan.</p>
+        <p>Bert co-developed the “Double U” concept with Teresa in early 2022, focusing on go-to-market and growth strategies for technology-driven companies. He currently serves as Head of Sales & Business Development for Beammwave and AlixLabs in Taiwan.</p>
+        <p>Bert began his career as a Sales Engineer at EDOM, a top-7 global IC distributor, and later advanced into senior leadership roles, founding the company’s first mass-market business group and leading sales and marketing initiatives. Earlier in his career, he managed product teams across multiple applications and supported five startups from 0 to 1.</p>
+        <p>He holds an MBA from National Central University, Taiwan.</p>
         
         <a href="https://tw.linkedin.com/in/bert-sie-891a9350" target="_blank" class="linkedin-btn">Connect on LinkedIn</a>
     </div>
