--- a/insights.html
+++ b/insights.html
@@ -207,7 +207,19 @@
                         <div class="read-more">Read Article &rarr;</div>
                     </div>
                 </a>
-
+                
+                <a href="https://kulr.ai/kulr-awarded-6-7m-by-texas-space-commission-to-advance-cold-temperature-kulr-one-space-battery-platform/" target="_blank" class="news-card">
+                    <div class="news-image" style="background: linear-gradient(135deg, #F8E1F4, #E0C7F0);
+                        <span>KULR  Awarded $6.7M </span>
+                    </div>
+                    <div class="news-content">
+                        <span class="news-date">APRIL 2025</span>
+                        <h4 class="news-title">a leader in advanced energy management platforms awarded $6,703,500n</h4>
+                        <p class="news-desc">by the Texas Space Commission</p>
+                        <div class="read-more">Read Article &rarr;</div>
+                    </div>
+                </a>
+                
                 <a href="https://beammwave.com/press-release/beammwave-and-alpha-networks-enters-into-an-agreement-to-do-a-joint-pre-study-for-the-next-generation-fixed-wireless-access-products/" target="_blank" class="news-card">
                     <div class="news-image" style="background: linear-gradient(135deg, #eb611b, #ff8c42);">
                         <span>BEAMMWAVE & ALPHA</span>
