--- a/insights.html
+++ b/insights.html
@@ -218,7 +218,7 @@
                 </a>
                 
                 <a href="https://kulr.ai/kulr-awarded-6-7m-by-texas-space-commission-to-advance-cold-temperature-kulr-one-space-battery-platform/" target="_blank" class="news-card">
-                    <div class="news-image" style="background: linear-gradient(135deg, #F8E1F4, #E0C7F0);">
+                    <div class="news-image" style="background: linear-gradient(135deg, #1073a4, #E0C7F0);">
                         <span>KULR Awarded $6.7M</span>
                     </div>
                     <div class="news-content">
