--- a/about.html
+++ b/about.html
@@ -270,7 +270,10 @@
 </div>
 
 <footer class="footer">
-    <div class="container"><div class="footer-logo"><img src="assets/images/DoubleU-logotype-27.png" alt="DoubleU Tech Logo"></div></div>
+    <div class="container">
+        <div class="footer-logo"><img src="assets/images/DoubleU-logotype-27.png" alt="DoubleU Footer Logo"></div>
+        <p>&copy; 2026 DoubleU-Tech Advisory. All Rights Reserved.</p>
+    </div>
 </footer>
 
 <script>
