--- a/insights.html
+++ b/insights.html
@@ -28,8 +28,8 @@
 
 <section class="page-header">
     <div class="container">
-        <h1>Impact & Insights</h1>
-        <p>Our Footprints. Making Impact, Making Headlines.</p>
+        <h1>Making Impact, Making Headlines</h1>
+        <p>Our Footprints. </p>
     </div>
 </section>
 
