--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
 <section id="contact" class="contact-section" style="background: var(--grey-bg);">
     <div class="container">
         <div class="section-header">
-            <span class="sub-title">Connect With Us</span>
-            <h2 class="main-title">Ready to Expand?</h2>
+            <span class="sub-title">STAY IN LOOP</span>
+            <h2 class="main-title">Connect With Us</h2>
             <p style="margin-top: 15px; color: var(--text-light);">Send us a message and we will contact you shortly.</p>
         </div>
 
@@ -218,3 +218,4 @@
 
 </body>
 </html>
+
