--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <span class="sub-title">Who We Are</span>
         <h2 class="main-title" style="margin-bottom: 30px;">Your Strategic Partner in Tech</h2>
         <p style="color: var(--text-light); margin-bottom: 40px;">
-            DoubleU-Tech Advisory was established to bridge the gap between complex technological innovations and practical business applications. With decades of experience in the semiconductor supply chain and IoT sectors, we provide the insight needed to win.
+            DoubleU-Tech Advisory was established to bridge the gap between complex technological innovations and practical business applications. With decades of experience in the semiconductor supply chain, we provide the insight needed to win.
         </p>
         <a href="about.html" class="read-more-btn">Read Our Story &rarr;</a>
     </div>
@@ -218,4 +218,5 @@
 
 </body>
 </html>
+
 
